<resources>
    <string name="app_name">login-kotlin-att</string>
    <string name="tela_inicial">Tela Inicial!</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="novo_usu_rio">Novo Usuário</string>
    <string name="confirme_a_senha">Confirme a Senha</string>
    <string name="retornar_ao_login">Retornar ao Login</string>
    <string name="logado">Logado</string>
    <string name="atualizar">Atualizar</string>
    <string name="retornar">Retornar</string>
</resources>